Collapse mode in side menu (196)

--- a/modules/ui/src/main/resources/io/jmix/ui/messages.properties
+++ b/modules/ui/src/main/resources/io/jmix/ui/messages.properties
@@ -150,6 +150,11 @@ databinding.conversion.error.offsetTime=Must be OffsetTime
 
 databinding.conversion.error.defaultMessage=Wrong format
 
+sideMenuCollapse = Collapse Menu
+sideMenuExpand = Expand Menu
+menuCollapseGlyph = «
+menuExpandGlyph = »
+
 app.sessionExpiredCaption=Session expired
 app.sessionExpiredMessage=Please login again
 app.initErrorCaption=Unexpected error
