--- a/modules/ui/src/main/resources/io/jmix/ui/messages_ru.properties
+++ b/modules/ui/src/main/resources/io/jmix/ui/messages_ru.properties
@@ -142,6 +142,11 @@ databinding.conversion.error.offsetTime=Должно иметь тип OffsetTim
 
 databinding.conversion.error.defaultMessage=Неверный формат
 
+sideMenuCollapse = Скрыть меню
+sideMenuExpand = Показать меню
+menuCollapseGlyph = «
+menuExpandGlyph = »
+
 app.sessionExpiredCaption=Сессия истекла
 app.sessionExpiredMessage=Пожалуйста, войдите в систему повторно
 app.initErrorCaption=Непредвиденная ошибка
