--- a/modules/ui/src/main/resources/io/jmix/ui/messages.properties
+++ b/modules/ui/src/main/resources/io/jmix/ui/messages.properties
@@ -77,7 +77,7 @@ actions.restoreToDefaults=Restore to defaults
 
 application.caption=CUBA Application
 application.logoLabel=CUBA Application
-application.logoImage=branding/app-icon-menu.png
+application.logoImage=branding/app-icon-menu.svg
 
 closeUnsaved.caption=You have unsaved changes
 closeUnsaved=Do you want to discard unsaved changes?
@@ -99,7 +99,7 @@ capsLockIndicator.capsLockOnMessage=Caps Lock is on
 
 loginWindow.caption=CUBA Login
 loginWindow.welcomeLabel=Welcome to CUBA!
-loginWindow.logoImage=branding/app-icon-login.png
+loginWindow.logoImage=branding/app-icon-login.svg
 loginWindow.loginPlaceholder = Login
 loginWindow.passwordPlaceholder = Password
 
